<resources>
    <string name="app_name">Champion Compass</string>
    <string name="sign_up">SIGN UP</string>
    <string name="google_signup">SIGN UP WITH GOOGLE?</string>
    <string name="welcome_message">Welcome to Champion Compass.</string>
    <string name="message">Let\'s dive into Introduction and Objectives before we head to the Quiz.</string>
    <string name="intro_objectives">Introduction and Objectives</string>
    <string name="submit">SUBMIT</string>
    <string name="mail">E-mail</string>
    <string name="pswd">Password</string>
    <string name="or">----------or----------</string>
    <string name="asi">Already signed up?</string>
    <string name="sign_in">sign in with google</string>
    <string name="explanation1">League of Legends is a team-based strategy game where two teams of five powerful
        champions face off to destroy the other’s base. You get to choose from over 140 champions to make epic plays,
        secure kills, and take down towers as you battle your way to victory.
    </string>
    <string name="explanation2">140+? that\'s a lot!!. I know and I am here to help you :). I have curated about 5
        champions for each lane in summoner\'s rift. Let\'s first discuss the lanes so we can determine which one is the
        best fit for you!
    </string>
    <string name="explanation3">------------Top lane:------------ It\'s primarily for tanky or durable champions known
        as top laners who excel at solo survival and one-on-one combat.
    </string>
    <string name="explanation4">-------------Mid lane:------------- It\'s reserved for mages and assassins who excel in
        burst damage and can swiftly influence other parts of the map.
    </string>
    <string name="explanation5">-------------Bot lane:------------- Played by ranged champions who aim to become
        powerful damage dealers in the later stages of the game.
    </string>
    <string name="explanation6">------------Support:------------ Supports assist the AD Carry by providing protection,
        engaging enemies, and controlling vision on the map.
    </string>
    <string name="explanation7">------------Jungle:------------ Junglers support lanes by clearing jungle camps for
        resources, controlling game objectives, and initiating surprise attacks (ganks).
    </string>
    <string name="explanation8">Not gonna lie, but that was a lot of explanation. Now, let\'s head to the quiz :)
    </string>
    <string name="garen">Garen</string>
    <string name="nasus">Nasus</string>
    <string name="Tryndamere">Tryndamere</string>
    <string name="aatrox">Aatrox</string>
    <string name="top_lane">TOP LANE</string>
    <string name="mid_lane">MID LANE</string>
    <string name="bot_lane">BOT LANE</string>
    <string name="support">SUPPORT LANE</string>
    <string name="jungle">JUNGLE LANE</string>
    <string name="annie">Annie</string>
    <string name="lux">Lux</string>
    <string name="ziggs">Ziggs</string>
    <string name="aurelion">Aurelion sol</string>
    <string name="ashe">Ashe</string>
    <string name="cait">Caitlyn</string>
    <string name="miss_f">Miss Fortune</string>
    <string name="jinx">Jinx</string>
    <string name="janna">Janna</string>
    <string name="leona">Leona</string>
    <string name="soraka">Soraka</string>
    <string name="yummi">Yummi</string>
    <string name="amumu">Amumu</string>
    <string name="rammus">Rammus</string>
    <string name="warwick">Warwick</string>
    <string name="voli">Volibear</string>
    <string name="yi">Master Yi</string>
    <string name="exit">EXIT</string>
    <string name="sign_out">Sign Out</string>
    <string name="open_nav">Open Navigation Bar</string>
    <string name="close_nav">Close Navigation Bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>


