<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="471dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="78dp"
            android:background="@drawable/buttondecoration_rectangle"
            android:layout_marginTop="110dp"
            android:layout_alignParentTop="true"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="581dp"
            android:background="@drawable/explanation_2"
            android:id="@+id/imageView16"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="66dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="12dp"
            android:layout_alignParentTop="true"/>


    <Button android:layout_width="179dp"
            android:id="@+id/sign_out_button"
            android:text="@string/sign_out"
            android:backgroundTint="@color/color1"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="115dp"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="117dp"/>
    <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="87dp"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:text="@string/intro_objectives"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/color1"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>
    <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/welcome_rectangle"
            android:layout_marginTop="124dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="39dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="19dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>
    <TextView
            android:id="@+id/textView3"
            android:layout_width="317dp"
            android:layout_height="97dp"
            android:fontFamily="@font/font1"
            android:gravity="center"
            android:shadowColor="@color/color2"
            android:shadowDx="2"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:text="@string/welcome_message"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="-5dp"
            android:layout_marginEnd="26dp"
            android:layout_alignEnd="@+id/imageView16"
            android:layout_marginStart="30dp"
            android:layout_alignStart="@+id/imageView16"
            android:layout_alignTop="@+id/imageView16"/>


    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="117dp"
            android:layout_alignStart="@+id/imageView8"
            android:layout_alignEnd="@+id/imageView8"
            android:layout_alignBottom="@+id/imageView8"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="61dp"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:fontFamily="@font/font1"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    <ImageView
            android:id="@+id/imageView10"
            android:layout_width="274dp"
            android:layout_height="285dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="137dp"
            app:srcCompat="@drawable/irelia"/>

</RelativeLayout>
