<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">


    <TextView
            android:id="@+id/topDecoration"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:text="@string/bot_lane"
            android:fontFamily="@font/font1"
            android:textColor="@color/white"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:layout_marginStart="-10dp"
            android:layout_marginEnd="-10dp"
            android:shadowRadius="1.5"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="-15dp"
            android:gravity="center"
            android:background="@drawable/lane"
            android:layout_alignParentStart="true"/>

    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bot_lane_button"
            android:shadowColor="#000000"
            android:textSize="20sp"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1.5"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/color1"
            android:background="@drawable/buttondecoration_rectangle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"/>
    <GridLayout
            android:id="@+id/my_grid"
            android:columnCount="2"
            android:rowCount="2"
            android:layout_width="match_parent"
            android:layout_height="588dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/white"
            android:layout_below="@+id/topDecoration"
            android:layout_marginBottom="63dp"
            android:layout_marginEnd="0dp">

        <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:backgroundTint="@color/white"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">

            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:backgroundTint="@color/white"
                          android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                        android:layout_width="180dp"
                        android:layout_height="230dp"
                        android:src="@drawable/ashe"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ashe"
                        android:fontFamily="@font/font1"
                        android:textColor="@color/black"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1.5"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:backgroundTint="@color/white"
                android:layout_height="10dp"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:layout_row="0"
                android:layout_column="1">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:backgroundTint="@color/white"
                          android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                        android:layout_width="180dp"
                        android:layout_height="230dp"
                        android:src="@drawable/cait"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cait"
                        android:fontFamily="@font/font1"
                        android:textColor="@color/black"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1.5"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="fill"
                android:backgroundTint="@color/white"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:layout_row="1"
                android:layout_column="0">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:backgroundTint="@color/white"
                          android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                        android:layout_width="180dp"
                        android:layout_height="230dp"
                        android:src="@drawable/miss_f"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/miss_f"
                        android:fontFamily="@font/font1"
                        android:textColor="@color/black"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1.5"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:backgroundTint="@color/white"
                android:layout_gravity="fill"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:layout_row="1"
                android:layout_column="1">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:gravity="center"
                          android:backgroundTint="@color/white"
                          android:layout_gravity="center_vertical|center_horizontal">

                <ImageView
                        android:layout_width="180dp"
                        android:layout_height="230dp"
                        android:src="@drawable/jynx"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jinx"
                        android:fontFamily="@font/font1"
                        android:textColor="@color/black"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="1.5"
                        android:textStyle="bold"
                        android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</RelativeLayout>